# trade

./: .gitignore  GOAL.md  README.md  pyproject.toml  requirements.txt
docs/: README.md  backtest_spec.md  data_strategy.md  experiment_protocol.md  ideas.md  modeling_strategy.md  research_log.md  research_plan.md  status.md  trading_ml_generalization_principles.md
tests/: test_backtest.py  test_context_drawdown_guard_selection.py  test_dataset.py  test_docs_reports.py  test_entry_ev_admission_gate_sensitivity.py  test_entry_ev_admission_input_diagnostics.py  test_entry_ev_admission_repair_target_diagnostics.py  test_entry_ev_admission_selection.py  test_entry_ev_base_policy_input_aliases.py  test_entry_ev_broad_horizon_viability.py  test_entry_ev_candidate_episode_support_diagnostics.py  test_entry_ev_common_loss_target_diagnostics.py  test_entry_ev_component_target_calibration.py  test_entry_ev_composite_target_decomposition.py  test_entry_ev_confidence_gate_overlay.py  test_entry_ev_context_calibration_sweep.py  test_entry_ev_delta_prior_context_guard_diagnostics.py  test_entry_ev_dense_executable_capture_model.py  test_entry_ev_direction_exit_residual_target_diagnostics.py  test_entry_ev_direction_inversion_policy_inputs.py  test_entry_ev_direction_inversion_selector_diagnostics.py  test_entry_ev_direction_residual_loss_diagnostics.py  test_entry_ev_downside_meta_block_policy_inputs.py  test_entry_ev_downside_meta_risk_margin_policy_inputs.py  test_entry_ev_entry_block_holdout_support_diagnostics.py  test_entry_ev_entry_block_prediction_flags.py  (+87 more)
(+473 files in other folders)
