[project]
name = "trade-data"
version = "0.1.0"
description = "Historical XAUUSD data pipeline for short-term trade modelling"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=16.0",
  "requests>=2.32",
  "scikit-learn>=1.5",
]

[project.scripts]
trade-histdata = "trade_data.histdata:main"
trade-convert = "trade_data.convert:main"
trade-validate = "trade_data.validate:main"
trade-backtest = "trade_data.backtest:main"
trade-dataset = "trade_data.dataset:main"
trade-model = "trade_data.modeling:main"
trade-meta = "trade_data.meta_model:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
